# QuantAI

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml  sitecustomize.py
.cache/akshare/: cache.db
Auto-GPT-Stock-main/playground/: akshare.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/docs_index/: __init__.py  loader.py  router.py  schemas.py
backend/app/graph/: agent_graph.py
backend/app/model/: schemas.py
backend/app/service/: stock_agent.py
backend/app/tools/: __init__.py  base.py  registry.py  stock_resolver.py  stock_tools.py  tushare_client.py
backend/tests/: test_config.py  test_docs_schemas.py  test_registry.py  test_router.py  test_schemas.py  test_stock_resolver.py  test_tushare_client.py  test_tushare_wrapper.py
backend/tests/artifacts/: tool_prompt_test_results.json
backend/tests/integration/: test_tool_prompt_report.py  test_tushare_smoke.py
docs/: DEVELOPMENT.md
docs/akshare/: README.md
docs/akshare/index/: article.json  bank.json  bond.json  currency.json  dc.json  energy.json  event.json  fund_private.json  fund_public.json  futures.json  fx.json  hf.json  index.json  interest_rate.json  macro.json  nlp.json  option.json  others.json  qdii.json  qhkc.json  qhkc_broker.json  qhkc_commodity.json  qhkc_fund.json  qhkc_fundamental.json  qhkc_index_data.json  qhkc_tools.json  spot.json  stock.json  tool.json
docs/akshare/tools/: stock_tools.json
docs/tushare/tools/: stock_tools.json
scripts/: build_tool_docs_index.py  install_runtime_compat.py  sync_akshare_docs.py
