[project]
name = "quantai"
version = "0.1.0"
description = "A LangChain and LangGraph A-share stock query agent demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.4",
    "langgraph>=1.0.0",
    "langchain-openai>=1.2.2",
    "pydantic-settings>=2.0.0",
    "tushare>=1.4.24",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = "Auto-GPT-Stock-main"

[tool.ruff]
line-length = 88
exclude = ["Auto-GPT-Stock-main"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
markers = [
    "integration: live upstream tests that call real Tushare / LLM APIs",
]
addopts = "-m 'not integration'"
